--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,5 +1,5 @@
 <div class="jumbotron text-center">
-	<h1>Home Page 4 Life</h1>
-
+	<h1>Home Page</h1>
+	<!-- <timer interval="1000">{{secondUnit}}</timer> -->
 	<p>{{ tagline }}</p>
 </div>
