--- a/public/views/enroll.html
+++ b/public/views/enroll.html
@@ -1,32 +1,77 @@
 <div class="jumbotron text-center">
 	<h1>Enrollment</h1>
-	<p>{{ tagline }}</p>
-    <script type="text/javascript" src="js/recorder.js"> </script>
-    <script type="text/javascript" src="js/resampler.js"> </script>
-    <script src="/socket.io/socket.io.js"></script>
-    <div class="input-group">
-     <span class="input-group-addon">User Name</span>
-     <input id="username" type="text" class="form-control" name="username" placeholder="Please input the user name." style="z-index:1">
-	</div>
-	<div>
-		<audio controls autoplay></audio>
-	</div>
-    <!-- <p>User name: <input type="text" name="username" id="username"></p> -->
-    <div ng-hide="timer1Visible" id="timer1div">
-	    <timer interval="1000" autostart="false">Recorder time:{{hours}} hour{{hoursS}}, {{minutes}} minute{{minutesS}}, {{seconds}} second{{secondsS}}.</timer>
+	<!-- <p>{{ tagline }}</p> -->
+    <div class="container">
+    	<div class="row">
+    		<div class="col-md-4 col-md-offset-4">
+			    <div class="input-group">
+			     <span class="input-group-addon">User Name</span>
+			     <input id="username" type="text" class="form-control" name="username" placeholder="Please input the user name." style="z-index:1" ng-model="username" autofocus>
+				</div>    			
+    		</div>
+    	</div>
+    	    	<div class="row">
+    		<div class="col-md-12">
+    			<br>
+    		</div>
+    	</div>
+    	<div class="row">
+			<div class="col-md-4 col-md-offset-4">
+				<audio controls autoplay></audio>
+			</div>    		
+    	</div>
+    	<div class="row">
+    		<div class="col-md-12">
+    			<br>
+    		</div>
+    	</div>
+		<div class="row">
+		    <div ng-hide="timer1Visible" id="timer1div" class="col-md-6 col-md-offset-3">
+			    <timer interval="1000" autostart="false">Recorder time:{{hours}} hour{{hoursS}}, {{minutes}} minute{{minutesS}}, {{seconds}} second{{secondsS}}.</timer>
+		    </div>			
+		</div>
+    	<div class="row">
+    		<div class="col-md-12">
+    			<br>
+    		</div>
+    	</div>
+		<div class="row">
+		    <div class="col-md-1 col-md-offset-4">
+		    	<button id="start" type="button" class="btn btn-primary" ng-click="startRecording()" ng-disabled = "recording">Start recording</button>
+		    	</div>
+		    <div class="col-md-1 col-md-offset-1">
+		    	<button id="stop" type="button" class="btn btn-primary" ng-click="stopRecording()" ng-disabled = "!recording">Stop recording</button>
+			</div>			
+		</div>
+		<div class="row">
+    		<div class="col-md-12">
+    			<br>
+    		</div>
+    	</div>
+    	<div class="row">
+    		<div class="col-md-1 col-md-offset-4">
+				<!-- <p>{{dataArray}}</p> -->
+    			  <ul>
+				    <li data-ng-repeat="x in dataArray">
+				      {{ x }}
+				    </li>
+				  </ul>
+    		</div>
+    	</div>
     </div>
-    <div>
-    	<button id="start" type="button" class="btn btn-primary" ng-click="startRecording()" ng-disabled = "recording">Start</button>
-    	<button id="stop" type="button" class="btn btn-primary" ng-click="stopRecording()" ng-disabled = "!recording">Stop</button>
-	</div>
-	<div>
+
+
+    <!-- <p>User name: <input type="text" name="username" id="username"></p> -->
+
+
+	<!-- <div> -->
         <!-- <div ng-app="timer" hidden="true" id="timer1div">
         <timer id="timer1" interval="1000" autostart="false">Recorder time:{{hours}} hour{{hoursS}}, {{minutes}} minute{{minutesS}}, {{seconds}} second{{secondsS}}.</timer>
         </div> -->
-        <p>User name: <input type="text" name="username" id="username"></p>
+<!--         <p>User name: <input type="text" name="username" id="username"></p>
         <input id="start" onclick="startRecording()" type="button" value="start recording" />
         <input id="stop" onclick="stopRecording()" type="button" disabled="disabled" value="stop recording and play" />
-      </div>
+      </div> -->
 <!--       <h4>Output Text from Kaldi:</h4>
       <div style="width:400px;height:100px;border:2px solid blue;" id="kaldi-output"></div>
       <h4>Target models in database:</h4>
