--- a/public/views/enroll.html
+++ b/public/views/enroll.html
@@ -58,6 +58,13 @@
 				  </ul>
     		</div>
     	</div>
+    	<div class="row">
+    		<div class="col-md-offset-3 col-md-6">
+    			<p ng-model = "shOutput">
+    				{{shOutput}}
+    			</p>
+    		</div>
+    	</div>
     </div>
 
 
