--- a/public/views/enroll.html
+++ b/public/views/enroll.html
@@ -3,11 +3,32 @@
 	<!-- <p>{{ tagline }}</p> -->
     <div class="container">
     	<div class="row">
-    		<div class="col-md-4 col-md-offset-4">
-			    <div class="input-group">
-			     <span class="input-group-addon">User Name</span>
-			     <input id="username" type="text" class="form-control" name="username" placeholder="Please input the user name." style="z-index:1" ng-model="username" autofocus>
-				</div>    			
+            <div class="col-md-4 col-md-offset-4">
+                <div class="input-group">
+                 <span class="input-group-addon">User Name:</span>
+                 <input id="username" type="text" class="form-control" name="username" placeholder="Please input the user name." style="z-index:1" ng-model="username" autofocus>
+                </div>              
+            </div>
+            <div class="col-md-1">
+                <button id="clear" type="button" class="btn btn-primary" ng-click="clearName()">Clear</button>
+            </div> 
+            <div class="col-md-12">
+                <br>
+            </div>
+            <div class="col-md-4 col-md-offset-4">
+			    <div class="form-group">
+ <!--                    <span class="input-group-addon">Gender:</span>
+                    <label class="radio-inline"><input type="radio" name="optgender">female</label>
+                    <label class="radio-inline"><input type="radio" name="optgender">male</label> -->
+                <div class="col-md-2">
+                    <label for="selgender" style="position: relative; bottom: -5px;">Gender:</label>
+                </div>
+                <div class="col-md-5 col-md-offset-1">
+                    <select class="form-control" id="selgender" name="gender" ng-model="gender">
+                      <option value="f">female</option>
+                      <option value="m">male</option>
+                    </select>  
+                </div> 
     		</div>
     	</div>
     	    	<div class="row">
@@ -18,7 +39,11 @@
     	<div class="row">
 			<div class="col-md-4 col-md-offset-4">
 				<audio controls autoplay></audio>
-			</div>    		
+			</div>   
+                <div class="col-md-2">
+                    <select class="form-control" id="samplerate" ng-model="sampleRate" ng-options="x for x in sampleRates">
+                    </select>
+                </div>             		
     	</div>
     	<div class="row">
     		<div class="col-md-12">
@@ -41,16 +66,18 @@
 		    	</div>
 		    <div class="col-md-1 col-md-offset-1">
 		    	<button id="stop" type="button" class="btn btn-primary" ng-click="stopRecording()" ng-disabled = "!recording">Stop recording</button>
-			</div>			
+			</div>
+            <div class="col-md-offset-1 col-md-1">
+                <button id="rebuild" type="button" class="btn btn-primary" ng-click="rebuild()" ng-disabled="bolrebuild">{{rebuildtxt}}</button>
+            </div>          
 		</div>
 		<div class="row">
     		<div class="col-md-12">
     			<br>
     		</div>
-    	</div>
+        </div>
     	<div class="row">
     		<div class="col-md-1 col-md-offset-4">
-				<!-- <p>{{dataArray}}</p> -->
     			  <ul>
 				    <li data-ng-repeat="x in dataArray">
 				      {{ x }}
@@ -58,13 +85,13 @@
 				  </ul>
     		</div>
     	</div>
-    	<div class="row">
+<!--     	<div class="row">
     		<div class="col-md-offset-3 col-md-6">
     			<p ng-model = "shOutput">
     				{{shOutput}}
     			</p>
     		</div>
-    	</div>
+    	</div> -->
     </div>
 
 
